doc: update jvm memory